--- a/source/css/blocks/common.css
+++ b/source/css/blocks/common.css
@@ -1,26 +1,3 @@
-.page-body {
-  margin: 0;
-  padding: 0;
-  min-width: 940px;
-  text-transform: uppercase;
-  font-family: "PT Sans Narrow", "Arial", sans-serif;
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 24px;
-  color: var(--text-color);
-  background-color: var(--background-color);
-
-  background-image: url("./../../img/background.png");
-  background-repeat: no-repeat;
-  background-position: center top;
-}
-
-@media (min-resolution: 2dppx) {
-  .page-body {
-    background-image: url("./../../img/background@2x.png");
-  }
-}
-
 a {
   text-decoration: none;
   color: var(--text-color);
@@ -29,4 +6,61 @@ a {
 img {
   max-width: 100%;
   height: auto;
+}
+
+.page {
+  height: 100%;
+}
+
+.wrapper {
+  margin: 0 auto;
+  padding: 0 10px;
+  width: 940px;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.title {
+  font-size: 30px;
+  line-height: 42px;
+}
+
+.button {
+  display: block;
+  padding: 10px 10px;
+  box-sizing: border-box;
+  width: 140px;
+  min-height: 44px;
+  text-align: center;
+  font-family: "PT Sans Narrow", "Arial", sans-serif;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 24px;
+  text-transform: uppercase;
+  border: none;
+  color: var(--text-color);
+  background-color: var(--main-color);
+  cursor: pointer;
+}
+
+.button:hover,
+.button:active {
+  background-color: var(--active-button-color);
+}
+
+.button--copyright:hover,
+.button--copyright:active {
+  color: var(--main-color);
+  background-color: var(--text-color);
 }
