--- a/source/css/blocks/fonts.css
+++ b/source/css/blocks/fonts.css
@@ -5,9 +5,9 @@
   font-display: swap;
   src: local("PT Sans Narrow"),
     local("PTSans-Narrow"),
-    url("./../fonts/pt-sans-narrow-v12-latin_cyrillic-regular.woff2")
+    url("./../../fonts/pt-sans-narrow-v12-latin_cyrillic-700.woff2")
     format("woff2"),
-    url("./../fonts/pt-sans-narrow-v12-latin_cyrillic-regular.woff")
+    url("./../../fonts/pt-sans-narrow-v12-latin_cyrillic-regular.woff")
     format("woff");
 }
 
