--- a/source/css/blocks/navigation.css
+++ b/source/css/blocks/navigation.css
@@ -1,13 +1,10 @@
 .navigation {
-  background-color: var(--background-color);
+  background-color: var(--main-color);
 }
 
 .navigation__wrapper {
   display: flex;
   justify-content: space-between;
-  margin: 0 auto;
-  padding: 0 10px;
-  width: 940px;
 }
 
 .navigation__list {
