--- a/source/css/blocks/page-body.css
+++ b/source/css/blocks/page-body.css
@@ -18,9 +18,19 @@
   background-position: center top;
 }
 
+.page-body--inner {
+  background-color: var(--background-color);
+  background-image: url("./../../img/inner-background.png");
+  background-repeat: repeat;
+}
+
 @media (min-resolution: 2dppx) {
   .page-body {
     background-image: url("./../../img/background@2x.png");
+  }
+
+  .page-body--inner {
+    background-image: url("./../../img/inner-background@2x.png");
   }
 }
 
