Добавляет разметку и стили страницы - заглушки. Blank page.

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -35,3 +35,6 @@
 @import "./blocks/product-group.css";
 @import "./blocks/catalog-form.css";
 @import "./blocks/pagination.css";
+
+/* blank */
+@import "./blocks/page-blank.css";
